--- a/index.html
+++ b/index.html
@@ -3,39 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Grid Cards</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:wght@400;600&display=swap">
-    <link rel="stylesheet" href="./css/style.css"> 
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <h1 class="title" >Cards</h1>
     <div class="cards">
-        <div class="card card1"> 
-            <div class="container ">
-                <img src="./image/Salaar3.webp" alt="lasvegas">
+        <div class="card1">
+            <div class="container">
+                <img src="./image/Salaar3.webp" alt="cinema">
             </div>
-            <div class="details">
-                <h3>Las Vegas</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
+            <div class="heading">
+                <h3>cinema clap</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia rem, quam tempore odio odit et!</p>
 
-            <div class="card card2"> 
-            <div class="container ">
-                <img src="./image/Salaar3.webp" alt="lasvegas">
             </div>
-            <div class="details">
-                <h3>Las Vegas</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-            </div>
+        </div>
 
-            <div class="card card3"> 
-            <div class="container ">
-                <img src="./image/Salaar3.webp" alt="lasvegas">
+        <div class="card2">
+            <div class="container">
+                <img src="./image/Salaar3.webp" alt="cinema">
             </div>
-            <div class="details">
-                <h3>Las Vegas</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <div class="heading">
+                <h3>cinema reel</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia rem, quam tempore odio odit et!</p>
             </div>
-
-            
-        </div>  
+        </div>
+        <div class="card3">
+            <div class="container">
+                <img src="./image/Salaar3.webp" alt="cinema">
+            </div>
+            <div class="heading">
+                <h3>clap end</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia rem, quam tempore odio odit et!</p> 
+            </div>
+        </div>
+        <div class="card4">
+            <div class="container">
+                <img src="./image/Salaar3.webp" alt="cinema">
+            </div>
+            <div class="heading">
+                <h3>clap end</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia rem, quam tempore odio odit et!</p> 
+            </div>
+        </div>
+        <div class="card5">
+            <div class="container">
+                <img src="./image/Salaar3.webp" alt="cinema">
+            </div>
+            <div class="heading">
+                <h3>clap end</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia rem, quam tempore odio odit et!</p> 
+            </div>
+        </div>
+        <div class="card6">
+            <div class="container">
+                <img src="./image/Salaar3.webp" alt="cinema">
+            </div>
+            <div class="heading">
+                <h3>clap end</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia rem, quam tempore odio odit et!</p> 
+            </div>
+        </div>
     </div>
+</body>
+</html>
